--- a/src/UI/src/Vivendi.UI.csproj
+++ b/src/UI/src/Vivendi.UI.csproj
@@ -1,5 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\src\Vivendi.Core.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\src\Vivendi.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
